Improved `form` component by adding `Send data to input`.

--- a/components/form/render.html
+++ b/components/form/render.html
@@ -99,6 +99,8 @@
 			if (!instance.state.invalid && instance.state.modified) {
 				button && button.prop('disabled', true);
 				var val = collectdata();
+				console.log(config.input, val);
+				config.input && instance.app.input(config.input, val);
 				fn(null, val);
 				setTimeout(refresh, delay);
 			}
