--- a/components/form/settings.html
+++ b/components/form/settings.html
@@ -6,6 +6,7 @@
 	<ui-component name="input" path="?.default" config="type:checkbox">Apply default values after the start</ui-component>
 	<ui-component name="input" path="?.bindtoall" config="type:checkbox">Bind value to all components with a defined path (otherwise to controls only)</ui-component>
 	<hr />
+	<ui-component name="input" path="?.input" config="dirsource:#inputs;dirempty:Empty" class="m">Send data to input</ui-component>
 	<div class="grid-2">
 		<div class="m">
 			<ui-component name="input" path="?.button">Button label</ui-component>
