Fixed rendering in Tabs.

--- a/components/tabs/render.html
+++ b/components/tabs/render.html
@@ -1,7 +1,7 @@
 <style>
 	.CLASS_buttons { list-style: none; padding: 0; margin: 0px; margin-bottom: -17px; overflow-x: scroll; display: -webkit-box; display: -ms-flexbox; display: flex; }
 	.CLASS ::-webkit-scrollbar { width: 0; background: transparent; }
-	.CLASS_btn { display: inline-block; min-width: 70px; margin-right: 8px; padding: 8px 16px; font-size: 14px; border-width: 1px; border-style: solid; border-color: #e0e0e0; border-bottom-color: #e0e0e0; background-color: #f8f8f8; border-radius: var(--radius) var(--radius) 0 0; cursor: pointer; }
+	.CLASS_btn { flex: 0 0 auto; min-width: 70px; margin-right: 8px; padding: 8px 16px; font-size: 14px; border-width: 1px; border-style: solid; border-color: #e0e0e0; border-bottom-color: #e0e0e0; background-color: #f8f8f8; border-radius: var(--radius) var(--radius) 0 0; cursor: pointer; }
 	.CLASS_btn.selected { border-bottom-color: #fff; border-bottom: 0; font-weight: bold; background-color: #fff; z-index: 10; }
 	.CLASS_containers { width: 100%; position: relative; border: 1px solid #e0e0e0; margin-top: -1px; border-radius: 0 var(--radius) var(--radius) var(--radius); background-color: #fff; }
 	.CLASS_content { padding: var(--gap); background-color: #fff; }
