--- a/components/tabs/editor.html
+++ b/components/tabs/editor.html
@@ -8,7 +8,7 @@
 
 	.CLASS_buttons { list-style: none; padding: 0; margin: 0px; margin-bottom: -17px; display: flex; overflow-x: scroll; }
 	.CLASS ::-webkit-scrollbar { width: 0; background: transparent; }
-	.CLASS_btn { display: inline-block; min-width: 70px; margin-right: 8px; padding: 8px 16px; font-size: 14px; border-width: 1px; border-style: solid; border-color: #e0e0e0; border-bottom-color: #e0e0e0; background-color: #f8f8f8; border-radius: var(--radius) var(--radius) 0 0; cursor: pointer; }
+	.CLASS_btn { flex: 0 0 auto; min-width: 70px; margin-right: 8px; padding: 8px 16px; font-size: 14px; border-width: 1px; border-style: solid; border-color: #e0e0e0; border-bottom-color: #e0e0e0; background-color: #f8f8f8; border-radius: var(--radius) var(--radius) 0 0; cursor: pointer; }
 	.CLASS_btn.selected { border-bottom-color: #fff; font-weight: bold; background-color: #fff; z-index: 10; }
 	.CLASS_containers { width: 100%; position: relative; border: 1px solid #e0e0e0; margin-top: -1px; border-radius: 0 var(--radius) var(--radius) var(--radius); background-color: #fff; }
 	.CLASS_content { padding: 5px; }
@@ -75,7 +75,7 @@
 
 		instance.on('configure', function() {
 
-			var containers = element.find('{0}_content'.format(cls2));
+			var containers = element.find('{0}_content_{1}'.format(cls2, instance.id));
 			var cache = {};
 
 			for (var item of config.items) {
@@ -95,7 +95,7 @@
 
 			render();
 
-			containers = element.find('{0}_content'.format(cls2));
+			containers = element.find('{0}_content_{1}'.format(cls2, instance.id));
 
 			for (var root of containers) {
 				var id = ATTRD(root);
