Fixed binding `FileUploader`.

--- a/components/fileuploader/render.html
+++ b/components/fileuploader/render.html
@@ -4,6 +4,8 @@
 
 	exports.make = function(instance, config, element) {
 
+		instance.state.bind = true;
+
 		var input = null;
 		var id = 'fileupload' + instance.id;
 
