--- a/components/button/editor.html
+++ b/components/button/editor.html
@@ -27,8 +27,8 @@
 	exports.author = 'Total.js';
 	exports.icon = 'ti ti-pointer';
 	exports.config = { name: 'button', type: 'primary', size: 'md', fullwidth: false, fullwidthxs: true, radius: true, bold: false, shadow: false, center: false, icon: 'ti ti-angle-right'  };
-	exports.settings = '/components/button/settings.html';
-	exports.render = '/components/button/render.html';
+	exports.settings = 'auto';
+	exports.render = 'auto';
 	exports.version = '1';
 	exports.type = ['app', 'dashboard'];
 
